Expanded Cheat Menu:
Changed:
Removed an error during tutorial

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,7 @@
 ID,Text,Translation
-302535920001239,,
-302535920001240,,
+302535920000247,,
+302535920000248,,
+302535920000249,,
 302535920001241,,
 302535920001242,,
 302535920001243,,
@@ -14,6 +15,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001239,Save Game During Tutorials,
 302535920000955,Handle,
 302535920001201,Interval,
 302535920001175,Debug FX,
@@ -358,10 +360,7 @@ Buildings are still unlocked.",
 302535920000243,Dust Storm Electrostatic,
 302535920000244,Dust Storm Great,
 302535920000245,Meteor Multi-Spawn,
-302535920000246,Missle 1,
-302535920000247,Missle 10,
-302535920000248,Missle 100,
-302535920000249,Missle 500,
+302535920000246,Missle,
 302535920000250,Might be a little laggy,
 302535920000251,Trigger Disaster,
 302535920000252,"Targeted to mouse cursor (use arrow keys to select and enter to start, Ctrl/Shift to multi-select).",
@@ -780,6 +779,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001240,Re-enable Save Game during tutorials.,
 302535920001206,Change how many Sols between autosaving.,
 302535920000845,Render,
 302535920000265,No More Pulsating Pins,
