Expanded Cheat Menu:
Changed:
Path Markers: Removed flags/text from markers, added real time option to the list.
Moved Change Map from Debug to Game.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -2,6 +2,14 @@ ID,Text,Translation
 302535920000247,,
 302535920000248,,
 302535920000249,,
+302535920000461,,
+302535920000463,,
+302535920000464,,
+302535920000465,,
+302535920000466,,
+302535920000875,,
+302535920001239,,
+302535920001240,,
 302535920001241,,
 302535920001242,,
 302535920001243,,
@@ -15,7 +23,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
-302535920001239,Save Game During Tutorials,
+302535920000467,Path Markers,
 302535920000955,Handle,
 302535920001201,Interval,
 302535920001175,Debug FX,
@@ -573,6 +581,7 @@ Not permanent.",
 302535920000446,Colonists Death Age,
 302535920000447,Change the age at which colonists die.,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000874,(see Path Markers to mark more than one at a time),
 302535920000864,Delete All Rocks,
 302535920001238,Removes any rocks for that smooth map feel (will take about 30 seconds).,
 302535920001208,Export Colonist Data To CSV,
@@ -595,13 +604,7 @@ Use Shift + Arrow keys to change the height/radius.",
 302535920000458,Make object dance on command.,
 302535920000459,Anim Debug Toggle,
 302535920000460,Attaches text to each object showing animation info (or just to selected object).,
-302535920000461,Lines,
-302535920000462,Maps paths in realtime (just lines).,
-302535920000463,Lines & Flags,
-302535920000464,Maps paths in realtime (doesn't show label).,
-302535920000465,Lines & Flags & Label,
-302535920000466,Maps paths in realtime (shows all).,
-302535920000467,Path Markers Toggle,
+302535920000462,Maps paths in real time,
 302535920000468,"Shows the selected unit path or show a list to add/remove paths for rovers, drones, colonists, or shuttles.",
 302535920000469,Close Dialogs,
 302535920000470,"Close any dialogs opened by ECM (Examine, ObjectManipulator, Change Colours, etc...).",
@@ -779,7 +782,6 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
-302535920001240,Re-enable Save Game during tutorials.,
 302535920001206,Change how many Sols between autosaving.,
 302535920000845,Render,
 302535920000265,No More Pulsating Pins,
@@ -1057,13 +1059,11 @@ See the list on the left for ids.
 For rules separate with spaces: Hunger Twister (or leave blank for none).",
 302535920000868,Choose map with settings presets:,
 302535920000869,"This %s doesn't have GetPath function, something is probably borked.",
-302535920000871,Select a moving object to see path.,
+302535920000871,Doesn't seem to be an object that moves.,
 302535920000872,Pathing,
 302535920000873,Doesn't work that well.,
-302535920000874,Set Visible Path Markers,
-302535920000875,Use HandleToObject[handle] to get object handle,
 302535920000876,Remove Waypoints,
-302535920000877,Remove waypoints from the map and reset colours (You need to select any object).,
+302535920000877,Remove waypoints from the map and reset colours.,
 302535920000878,Skip Flags,
 302535920000879,"Doesn't add the little flags, just lines and spheres (good for larger maps).",
 302535920000880,Set Rover Charge Radius,
