Expanded Cheat Menu:
Changed:
Cleaned up some english.
Exposed option to show startup ticks.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation
-302535920000247,,
 302535920000248,,
 302535920000249,,
 302535920000461,,
@@ -901,6 +900,7 @@ restart to set disabled.",
 302535920000726,Add more funding (or reset back to 500 M).,
 302535920000727,Fill Selected Resource,
 302535920000728,Fill the selected/moused over object's resource(s),
+302535920000247,Startup ticks,
 302535920000729,You've started a mystery!,
 302535920000730,You've chosen a mystery!,
 302535920000731,Deutsche Gesellschaft für Rassenhygiene,
