Expanded Cheat Menu:
Changed:
Updated Fixes>Most>High Stutter With High FPS: Made the colonists more random.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Skip Logos/changes.txt
+++ b/Mods ChoGGi/Skip Logos/changes.txt
@@ -1,3 +1,5 @@
+Version 0.8
+Added the options from Skip Missing Mods & DLC Msgs (commented out).
 Version 0.7
 Now retrieves the correct Assets Revision, so no more need for version bumping.
 Version 0.6
