Expanded Cheat Menu:
Fixed:
FlattenGround: Fixed issue with pipes getting marked as uneven terrain (works on broked saves).

Added:
Help>ECM>Disable ECM: Disables menu, cheat panel, and hotkeys, but leaves settings intact. You'll need to manually re-enable in CheatMenuModSettings.lua file.


ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation
-302535920000465,,
-302535920000466,,
-302535920000875,,
 302535920001239,,
 302535920001240,,
 302535920001241,,
@@ -125,6 +122,9 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
+302535920000967,Nothing selected.,
+302535920000968,Collisions,
+302535920000969,Collisions %s on %s,
 302535920000012,Error borked building,
 302535920000015,Can't colour object,
 302535920000017,Use the colour picker (dbl right-click for instant change).,
@@ -822,11 +822,13 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000875,Game Functions,
+302535920000465,"Disables menu, cheat panel, and hotkeys, but leaves settings intact (restart to toggle). You'll need to manually re-enable in CheatMenuModSettings.lua file.",
 302535920001025,Help! I'm with stupid!,
 302535920001014,Hide Cheats Menu,
-302535920001019,"This will hide the Cheats menu, Use F2 to see it again, and use Ctrl-F2 to toggle the Cheats selection panel.",
+302535920001019,This will hide the Cheats menu; Use F2 to see it again (Ctrl-F2 to toggle the Cheats selection panel).,
 302535920001020,Read me,
-302535920001023,This WILL take awhile if you open it in dump text.,
+302535920001023,This WILL take awhile if you open it in View Text.,
 302535920001029,Change log,
 302535920001028,"Have a Tutorial, or general info you'd like to add?",
 302535920000657,Screenshot,
@@ -1148,9 +1150,6 @@ Mechanized: 1,000,000",
 302535920000964,Rover Infinite Loop,
 302535920000965,Drone Carry Fix,
 302535920000966,Sorting cc dist,
-302535920000967,Nothing selected.,
-302535920000968,Collisions,
-302535920000969,on,
 302535920000970,Removed unreachable,
 302535920000971,Sites,
 302535920000972,Buildings attached.,
@@ -1241,6 +1240,8 @@ And yes Medium is using a higher setting than High...",
 302535920001066,What used to be the default for this ECM setting,
 302535920001067,Zoom,
 302535920001065,Menu Option,
+302535920000466,"This will disable the cheats menu, cheats panel, and all hotkeys.
+CheatMenuModSettings.lua > DisableECM to re-enable them.",
 302535920001068,Interface in screenshots,
 302535920001069,Interface,
 302535920001070,Restart to take effect.,
@@ -1256,7 +1257,7 @@ Do this, don't do that, can't you read the sign?",
 302535920001078,"Hover mouse over menu item to get description and enabled status
 If there isn't a status then it's likely a list of options to choose from
 
-For any issues; please report them to my github/steams/nexusmods page, or email",
+For any issues; please report them to my Github/Steam/NexusMods page, or email %s",
 302535920000347,Star Dome,
 302535920000351,Hexa Dome,
 302535920000220,RC Rover Emergency Power,
