--- a/Mods ChoGGi/Terraformer/changes.txt
+++ b/Mods ChoGGi/Terraformer/changes.txt
@@ -1,3 +1,5 @@
+v0.3
+Fixed issue with pipes getting marked as uneven terrain.
 v0.2
 Shift Left/Right to change radius.
 Shift Up/Down to change height.
