Expanded Cheat Menu:
Added:
Examine>Tools>Functions: Shows a list of all functions.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation
-302535920001239,,
-302535920001240,,
 302535920001241,,
 302535920001242,,
 302535920001243,,
@@ -144,6 +142,8 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any,
 302535920000032,Select a resource to find,
+302535920001239,Functions,
+302535920001240,Show all functions of this object and parents/ancestors.,
 302535920001001,ECM: Slight issue with %s you may safely ignore the following error or three.,
 302535920000520,Parents,
 302535920000525,Ancestors,
