Expanded Cheat Menu:
Added:
Help>ECM>Edit ECM Settings File: No more having to browse to the AppData folder if you need to change something manually.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,8 +1,5 @@
 ID,Text,Translation
-302535920001242,,
-302535920001243,,
-302535920001244,,
-302535920001245,,
+302535920000005,,
 302535920001246,,
 302535920001247,,
 302535920001248,,
@@ -98,8 +95,8 @@ ID,Text,Translation
 302535920001154,Displays the log text in a window you can copy sections from.,
 302535920000563,Copy Log Text,
 302535920000201,Active,
-302535920000001,"F2 to toggle cheats menu
-""Debug>Console: Toggle On-Screen Log"" to toggle this console history.",
+302535920000001,"F2 to toggle cheats menu, and F9 to clear this text.
+Press ~ or Enter and click the ""Console"" button to toggle this console history.",
 302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
 302535920000002,Dumped,
 302535920000003,Can't dump nothing,
@@ -111,9 +108,8 @@ ID,Text,Translation
 302535920000793,History,
 302535920000881,"Place .lua files in %s to have them show up in the ""Scripts"" list, you can then use the list to execute them (you can also create folders for sorting).",
 302535920000888,Any .lua files in here will be part of a list that you can execute in-game from the console menu.,
-302535920000005,"Slow arsed hard drive, or something is wrong...",
-302535920000006,Failed to save a settings to,
-302535920000007,"CheatMod_CheatMenu: Problem loading AppData/Surviving Mars/CheatMenuModSettings.lua
+302535920000006,Failed to save settings to %s : %s,
+302535920000007,"Problem loading AppData/Surviving Mars/CheatMenuModSettings.lua
 If you can delete it and still get this error; please send it and this log to the author.",
 302535920000008,Error: Couldn't convert old settings to new settings,
 302535920000009,Missing Scenario Name,
@@ -701,7 +697,7 @@ The map disaster settings don't do jack.",
 302535920000564,Change how many colonists can arrive on Mars in a single Rocket.,
 302535920000565,Storage Mechanized Depots Temp,
 302535920000566,Allow the temporary storage to hold 100 instead of 50 cubes.,
-302535920000568,Change how many workers per building type.,
+302535920000568,"Set worker capacity of buildings of selected type, also applies to newly placed ones.",
 302535920000569,Building Capacity,
 302535920000570,"Set capacity of buildings of selected type, also applies to newly placed ones (colonists/air/water/elec).",
 302535920000571,Building Visitor Capacity,
@@ -822,6 +818,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001242,Edit ECM Settings File,
+302535920001243,Manually edit ECM settings.,
 302535920000875,Game Functions,
 302535920000465,"Disables menu, cheat panel, and hotkeys, but leaves settings intact (restart to toggle). You'll need to manually re-enable in CheatMenuModSettings.lua file.",
 302535920001025,Help! I'm with stupid!,
@@ -1240,6 +1238,8 @@ And yes Medium is using a higher setting than High...",
 302535920001066,What used to be the default for this ECM setting,
 302535920001067,Zoom,
 302535920001065,Menu Option,
+302535920001244,"Saves settings to file, and applies any changes.",
+302535920001245,Abort without touching anything.,
 302535920000466,"This will disable the cheats menu, cheats panel, and all hotkeys.
 CheatMenuModSettings.lua > DisableECM to re-enable them.",
 302535920001068,Interface in screenshots,
