Expanded Cheat Menu:
Changes:
Moved Delete Object into a separate folder for less accident prone clicking.
Added a confirmation dialog when pressing Delete All Rocks.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,5 @@
 ID,Text,Translation
-302535920000005,,
-302535920001246,,
+302535920000853,,
 302535920001247,,
 302535920001248,,
 302535920001249,,
@@ -1042,11 +1041,10 @@ Warning: Disable births or else...",
 302535920000850,Reload lua done,
 302535920000851,"isn't an object?
 Sounds like a broked save; send me the file and I'll take a look",
-302535920000852,This will delete all,
-302535920000853,of,
+302535920000852,This will delete all %s of %s,
 302535920000854,Takes about thirty seconds for 12 000 objects.,
 302535920000855,Last chance before deletion!,
-302535920000856,"Yes, I want to delete all",
+302535920000856,"Yes, I want to delete all: %s",
 302535920000857,"No, I need to backup my save first (like I should've done before clicking something called ""Delete All"").",
 302535920000858,Idx,
 302535920000859,Anim State,
@@ -1362,7 +1360,9 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920001196,"If your funds are a negative value, then you added too much.
 Fix with",
 302535920001198,Resouce Filled,
-302535920000885,Permanently delete this object: %s.,
+302535920000005,Drops a new colonist in selected dome.,
+302535920001246,Changes colour of %s back to default.,
+302535920000885,Permanently delete %s,
 302535920001199,"Double the amount of colonist slots for this %s.
 
 Reselect to update display.",
@@ -1388,15 +1388,15 @@ Reselect to update display.",
 302535920001218,Selects nearest storage containing specified resource (shows list of resources).,
 302535920001220,Change this %s so it doesn't need a power source.,
 302535920001221,Change this %s so it needs a power source.,
-302535920001223,Hides any signs above object (until state is changed).,
-302535920001224,Changes colour of object to random colour (doesn't change attachments).,
+302535920001223,Hides any signs above %s (until state is changed).,
+302535920001224,Changes colour of %s to random colours (doesn't change attachments).,
 302535920001225,Add visual dust and maintenance points.,
-302535920001226,You may need to use AddDust before using this to make the building look visually.,
+302535920001226,You may need to use AddDust before using this to change the building visually.,
 302535920001227,Turns object into ruin.,
 302535920001228,This will remove the %s object from the map.,
 302535920001230,"Empties the storage of this building.
 
-Excluding waste rock in something other than a dumping site.",
+If this isn't a dumping site then waste rock will not be emptied.",
 302535920001231,Refill the deposit to full capacity.,
 302535920001232,Fill the storage of this building.,
 302535920001233,Launches rocket without asking.,
