Expanded Cheat Menu:
Added:
Options to remove water/air consumption (Cheats pane, and Menu>Buildings).
Fixed:
Dome Only checkbox didn't work.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,9 +1,48 @@
 ID,Text,Translation
-302535920000853,,
-302535920001247,,
-302535920001248,,
-302535920001249,,
-302535920001250,,
+302535920001257,,
+302535920001258,,
+302535920001259,,
+302535920001260,,
+302535920001261,,
+302535920001262,,
+302535920001263,,
+302535920001264,,
+302535920001265,,
+302535920001266,,
+302535920001267,,
+302535920001268,,
+302535920001269,,
+302535920001270,,
+302535920001271,,
+302535920001272,,
+302535920001273,,
+302535920001274,,
+302535920001275,,
+302535920001276,,
+302535920001277,,
+302535920001278,,
+302535920001279,,
+302535920001280,,
+302535920001281,,
+302535920001282,,
+302535920001283,,
+302535920001284,,
+302535920001285,,
+302535920001286,,
+302535920001287,,
+302535920001288,,
+302535920001289,,
+302535920001290,,
+302535920001291,,
+302535920001292,,
+302535920001293,,
+302535920001294,,
+302535920001295,,
+302535920001296,,
+302535920001297,,
+302535920001298,,
+302535920001299,,
+302535920001300,,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
@@ -220,7 +259,7 @@ Double click selected item to open in new manipulator.",
 I will face my fear. I will permit it to pass over me and through me.
 And when it has gone past I will turn the inner eye to see its path.
 Where the fear has gone there will be nothing. Only I will remain.",
-302535920000108,Select something with a protect_range (MDSLaser/DefenceTower).,
+302535920000108,Select a building with a protect_range (MDSLaser/DefenceTower).,
 302535920000109,Protect,
 302535920000113,range is now,
 302535920000114,Set Protection Radius,
@@ -228,9 +267,10 @@ Where the fear has gone there will be nothing. Only I will remain.",
 302535920000117,Unlock Buildings,
 302535920000118,Pick the buildings you want to unlock (use Ctrl/Shift for multiple).,
 302535920000119,: Is that a rocket in your pocket?,
-302535920000120,You need to select something that uses electricity.,
-302535920000121,power consumption,
-302535920000122,You need to select something that has capacity (air/water/elec).,
+302535920000120,You need to select a building that uses electricity.,
+302535920000122,You need to select a building that has capacity (air/water/elec).,
+302535920000121,You need to select a building that uses water.,
+302535920001250,You need to select a building that uses oxygen.,
 302535920000123,Defaults,
 302535920000124,Charge,
 302535920000125,Discharge,
@@ -298,8 +338,12 @@ I trust you are not in too much distress.",
 302535920000183,Only place Pillars at start and end.,
 302535920000184,Unlimited Connection Length,
 302535920000185,"No more length limits to pipes, cables, and passages.",
-302535920000186,Powerless Building,
+302535920000186,Power-free Building,
 302535920000187,Toggle electricity use for selected building type.,
+302535920001251,Water-free Building,
+302535920001252,Toggle water use for selected building type.,
+302535920001253,Oxygen-free Building,
+302535920001254,Toggle oxygen use for selected building type.,
 302535920000188,Set Charge & Discharge Rates,
 302535920000189,Change how fast Air/Water/Battery storage capacity changes.,
 302535920000190,Use last building placement orientation.,
@@ -1256,6 +1300,8 @@ Do this, don't do that, can't you read the sign?",
 If there isn't a status then it's likely a list of options to choose from
 
 For any issues; please report them to my Github/Steam/NexusMods page, or email %s",
+302535920001255,Will only apply to objects in the same dome as selected object.,
+302535920001256,Will only apply to selected object.,
 302535920000347,Star Dome,
 302535920000351,Hexa Dome,
 302535920000220,RC Rover Emergency Power,
@@ -1388,6 +1434,10 @@ Reselect to update display.",
 302535920001218,Selects nearest storage containing specified resource (shows list of resources).,
 302535920001220,Change this %s so it doesn't need a power source.,
 302535920001221,Change this %s so it needs a power source.,
+302535920000853,Change this %s so it doesn't need a water source.,
+302535920001247,Change this %s so it needs a water source.,
+302535920001248,Change this %s so it doesn't need a oxygen source.,
+302535920001249,Change this %s so it needs a oxygen source.,
 302535920001223,Hides any signs above %s (until state is changed).,
 302535920001224,Changes colour of %s to random colours (doesn't change attachments).,
 302535920001225,Add visual dust and maintenance points.,
