Expanded Cheat Menu:
Added:
Auto-refresh toggle in Examine Object.
Change Colour/Delete added to deposit cheats pane.

Changed:
Examine>Tools>Functions:
	Actual object wasn't being added.
	Now sorted by object/parent/ancestor.
Examine go to text: Press Up arrow to scroll to top.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation
-302535920001257,,
 302535920001258,,
 302535920001259,,
 302535920001260,,
@@ -175,6 +174,7 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any,
 302535920000032,Select a resource to find,
+302535920001257,Auto-refresh list every second.,
 302535920001239,Functions,
 302535920001240,Show all functions of this object and parents/ancestors.,
 302535920001001,ECM: Slight issue with %s you may safely ignore the following error or three.,
@@ -186,9 +186,9 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000239,Tools,
 302535920000228,Assign to,
 302535920000069,Examine,
-302535920000043,Scrolls to text entered,
-302535920000044,Goto text,
-302535920000045,"Scrolls down one line or scrolls between text in ""Goto text"".
+302535920000043,Scrolls to text entered (press Enter to scroll between found text, Up arrow to scroll to top).,
+302535920000044,Go to text,
+302535920000045,"Scrolls down one line or scrolls between text in ""Go to text"".
 
 Right-click to scroll to top.",
 302535920000046,dumps text to AppData/DumpedExamine.lua,
@@ -239,7 +239,7 @@ Warning: Entering the wrong value may crash the game or otherwise cause issues."
 302535920000089,Nothing left,
 302535920000091,Auto-refresh list every second (turn off to edit values).,
 302535920000092,Refresh list.,
-302535920000093,Goto Obj,
+302535920000093,Go to Obj,
 302535920000094,View object on map.,
 302535920000095,New Entry,
 302535920000096,Enter the name of the new entry to be added.,
