--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,11 +1,4 @@
 ID,Text,Translation
-302535920001258,,
-302535920001259,,
-302535920001260,,
-302535920001261,,
-302535920001262,,
-302535920001263,,
-302535920001264,,
 302535920001265,,
 302535920001266,,
 302535920001267,,
@@ -45,6 +38,8 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000367,Mod Upload,
+302535920000236,Mod Editor,
 302535920000248,Colonists Stuck Outside Service Buildings,
 302535920000979,Presets,
 302535920000467,Path Markers,
@@ -392,7 +387,6 @@ Doesn't work with domes.",
 302535920000234,Cheats menu save position,
 302535920000235,"Save your game.
 This will switch to a new map.",
-302535920000236,Mod Editor,
 302535920000237,Okay (change map),
 302535920000238,"Are you sure you want to reset all research (includes breakthrough tech)?
 
@@ -523,7 +517,6 @@ Skip it?",
 302535920000364,Complete all wires and pipes instantly.,
 302535920000365,Complete Constructions,
 302535920000366,Complete all constructions instantly.,
-302535920000367,Mod Editor,
 302535920000368,Switch to the mod editor.,
 302535920000369,No More Earthsick,
 302535920000370,Colonists will never become Earthsick (and removes any when you enable this).,
@@ -861,6 +854,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001264,"Show list of mods to upload to Steam Workshop.",
 302535920001242,Edit ECM Settings File,
 302535920001243,Manually edit ECM settings.,
 302535920000875,Game Functions,
@@ -1280,6 +1274,12 @@ And yes Medium is using a higher setting than High...",
 302535920001066,What used to be the default for this ECM setting,
 302535920001067,Zoom,
 302535920001065,Menu Option,
+302535920001258,Copy Files,
+302535920001259,"Copies all mod files to AppData/ModUpload, uncheck to copy files manually.",
+302535920001260,Blank Mod,
+302535920001261,"Uploads a blank private mod to Steam Workshop, and prints Workshop id in log.",
+302535920001262,"""AppData/ModUpload"" folder is empty and waiting for insert.",
+302535920001263,"Mod author name is different from your name, do you have permission to upload this mod?",
 302535920001244,"Saves settings to file, and applies any changes.",
 302535920001245,Abort without touching anything.,
 302535920000466,"This will disable the cheats menu, cheats panel, and all hotkeys.
