Add Water Each Sol: Turns out it was increasing the amount above max...
ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Broked Transport Stutter/changes.txt
+++ b/Mods ChoGGi/Broked Transport Stutter/changes.txt
@@ -1,2 +1,2 @@
 v0.2
-Changed it from checking each rc once an hour (in-game) to checking when during load/unload of resources.
+Changed it from checking each RC once an hour (in-game) to checking when during load/unload of resources.
